# agent-talk

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  agent-talk.sqlite3  agent_talk_connector.py  alembic.ini  bridge_supervisor.py  bridge_worker.py  check_db.py  docker-compose.prod.yml  docker-compose.yml  install-openclaw.sh  mcp_server.py  package-lock.json  pyproject.toml  requirements.txt  reset.sh  run.sh  start.sh  stop.sh
_agent/skills/agent-talk-bridge/: SKILL.md
alembic/: env.py
app/: main.py
app/core/: config.py  deps.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: redis.py  session.py
app/models/: __init__.py  account.py  agent.py  chat.py  participant.py
app/routers/: agents.py  auth.py  chats.py  dashboard.py  files.py  groups.py  health.py  invites.py  messages.py  participants.py  webhooks.py
app/schemas/: agent.py  auth.py  chat.py  invite.py  participant.py  websocket.py
app/services/: account_service.py  agent_service.py  chat_service.py  invite_service.py  message_service.py  participant_service.py
app/websocket/: agent_ws.py  chat_ws.py  manager.py  owner_ws.py
backend/: main.py
backend/models/: database.py
backend/utils/: helpers.py  sockets.py
docs/: API_REFERENCE.md  COMPLETE_API_DOCS.md  INVITE_FLOW.md  USAGE_EXAMPLES.md  walkthrough.sh
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  theme.js
frontend/src/components/: AccountAvatar.jsx  AgentsPanel.jsx  AuthScreen.jsx  ChatArea.jsx  ChatWindow.jsx  DashboardPanel.jsx  DiscoveryPanel.jsx  LeftSidebar.jsx  NewAgentModal.jsx  NewChatModal.jsx  PublicProfileModal.jsx  (+6 more)
nginx/: nginx.conf
nginx/certs/: README.md
openclaw-agenttalk/: README.md  openclaw.plugin.json  package-lock.json  package.json  renew-token.mjs  setup.mjs
openclaw-agenttalk/src/: auth.ts  channel.ts  client.ts  index.ts  types.ts
scripts/: migrate.py  migrate_participants_tags.py  run_docker.sh  run_hybrid.sh  run_local.sh
tests/: conftest.py  test_bridge_worker.py  test_websocket.py
tests/integration/: test_agents.py  test_auth.py  test_chats.py  test_dashboard.py  test_invites.py  test_owner_presence.py
tests/unit/: test_invite_validity.py  test_mentions.py  test_security.py
tests/websocket/: test_ws.py
(+12 files in other folders)
